# Natural-Language-Processing

./: 1984-george-orwell.py  LICENSE  Makefile  README.md  TreasureIsland.txt  Untitled Diagram.drawio  nlp.py  pyproject.toml  treasureisland.txt  zifu.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-app.yml
corpora/: 1984.txt
